--- a/index.html
+++ b/index.html
@@ -84,19 +84,36 @@
 
 <!-- channel area -->
 <!-- #1 #channels #app-bar -->
-<h1>chatter|app</h1>
+<h1><img src="https://ip.lfe.mw.tum.de/sections/moocus.png" alt"No picture available" style="height:56px">chatter|app</h1>
 
 <!-- #1 #channels #topics -->
-<h2>#Yummy</h2>
+<!--<h2>#Yummy</h2>
 <h2>#SevenContinents</h2>
 <h2>#KillerApp</h2>
 <h2>#FirstPersonOnMars</h2>
-<h2>#Octoberfest</h2>
+<h2>#Octoberfest</h2>-->
+<div>
+    <ul>
+        <li>#Yummy<img src="https://ip.lfe.mw.tum.de/sections/star.png"></li>
+        <li>#SevenContinents<img src="https://ip.lfe.mw.tum.de/sections/star-o.png"></li>
+        <li>#KillerApp<img src="https://ip.lfe.mw.tum.de/sections/star-o.png"></li>
+        <li>#FirstPersonOnMars<img src="https://ip.lfe.mw.tum.de/sections/star-o.png"></li>
+        <li>#Octoberfest<img src="https://ip.lfe.mw.tum.de/sections/star.png"></li>
+    </ul>
+    <style>
+        li{
+            backgorund-color:white;
+        }
+        ul{
+            list-style-type: none;
+        }
+    </style>
+</div>
 
 <!-- #1 #channels #buttons -->
-<button>new</button>
+<span style="background-color:white"><button>new</button>
 <button>trending</button>
-<button>favorites</button>
+<button>favorites</button></span style>
 
 
 <!-- chat area -->
