--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <h2>#KillerApp</h2>
 <h2>#FirstPersonOnMars</h2>
 <h2>#Octoberfest</h2>-->
-<div>
+<div style="background-color:white">
     <ul>
         <li>#Yummy<img src="https://ip.lfe.mw.tum.de/sections/star.png"></li>
         <li>#SevenContinents<img src="https://ip.lfe.mw.tum.de/sections/star-o.png"></li>
@@ -108,12 +108,12 @@
             list-style-type: none;
         }
     </style>
-</div>
+</div style>
 
 <!-- #1 #channels #buttons -->
-<span style="background-color:white"><button>new</button>
-<button>trending</button>
-<button>favorites</button></span style>
+<div style="background-color:white"><button ><img src="https://ip.lfe.mw.tum.de/sections/lightbulb-o.png">new</button >
+<button><img src="https://ip.lfe.mw.tum.de/sections/fire.png">trending</button >
+<button><img src="https://ip.lfe.mw.tum.de/sections/star.png">favorites</button ></div style>
 
 
 <!-- chat area -->
@@ -135,7 +135,7 @@
     <em>15 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>What's the place you folks call home?</p>
+<div style="width:80%"><p>What's the place you folks call home?</p></div style>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
@@ -148,7 +148,7 @@
     <em>4 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>BRISBANE! Hang loose!</p>
+<div style="width:80%"><p>BRISBANE! Hang loose!</p></div style>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
@@ -161,7 +161,7 @@
     <em>12 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>The big apple.</p>
+<div style="width:80%"><p>The big apple.</p></div style>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
@@ -174,7 +174,7 @@
     <em>7 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>Eu sou um Carocas.</p>
+<div style="width:80%"><p>Eu sou um Carocas.</p></div style>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
@@ -187,7 +187,7 @@
     <em>14 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>Greetings from the western cape!</p>
+<div style="width:80%"><p>Greetings from the western cape!</p></div style>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
@@ -200,7 +200,7 @@
     <em>15 min. left</em>
 </h3>
 <!-- #1 #chat #messages depict a short fictional chat-->
-<p>北京</p>
+<div style="width:80%"><p>北京</p></div style>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
 
